fix: memperbaiki endpoint api
